Keep only desired changes
